Missing: gui for compare.c and fixing weird behavior in vxm.c

--- a/Arqui 2/Taller 3/Makefile
+++ b/Arqui 2/Taller 3/Makefile
@@ -1,9 +1,16 @@
 SRC_DIR = src/
 LIB_DIR = lib/
-EXE_DIR = bin/
+BIN_DIR = bin/
+
+EXE_COMP = compare
+EXE_SIMD = vxm
 
 all: 
 		mkdir -p bin && make -C $(LIB_DIR) && make -C $(SRC_DIR)
+
+run:
+		$(BIN_DIR)$(EXE_COMP)
+		$(BIN_DIR)$(EXE_SIMD)
 
 reset:
 		rm -r bin/
