Fixed harmonic and finished harmonic_omp. fixed all Makefiles

--- a/Arqui 2/Taller 4/Makefile
+++ b/Arqui 2/Taller 4/Makefile
@@ -4,8 +4,6 @@ LIB_DIR = lib/
 CC = gcc -o
 FLAGS = -fopenmp
 
-
-
 all: 
 		mkdir -p bin && make -C $(LIB_DIR) && make -C $(SRC_DIR)
 
@@ -23,6 +21,9 @@ euler_omp:
 		
 harmonic:
 		./bin/harmonic
+
+harmonic_omp:
+		./bin/harmonic_omp
 		
 reset:
 		rm -r bin/
