Did saxpy with sse and openmp. Modify for NEON

--- a/Arqui 2/Taller 4/src/Makefile
+++ b/Arqui 2/Taller 4/src/Makefile
@@ -33,6 +33,8 @@ INCLUDE_DIR = ../include/
 BIN_DIR = ../bin/
 
 all:
+		make saxpy
+		make omp_saxpy
 		make euler
 		make omp_euler
 		make harmonic
