fsm mostly working

--- a/Embebidos/Taller11/Makefile
+++ b/Embebidos/Taller11/Makefile
@@ -4,14 +4,14 @@ IFLAG = -I/opt/systemc/include
 LFLAG = -L/opt/systemc/lib-linux64
 FLAGS = -lsystemc -lm
 
-SRC_H = main.cpp
-EXE_H = main
+SRC_C = machine.cpp
+EXE_C = machine
 
 #export LD_LIBRARY_PATH=/opt/systemc/lib-linux64
 
 machine:
-		$(CC) $(IFLAG) $(LFLAG) -o $(EXE_H) $(SRC_H) $(FLAGS)
-		./$(EXE_H)
+		$(CC) $(IFLAG) $(LFLAG) -o $(EXE_C) $(SRC_C) $(FLAGS)
+		./$(EXE_C)
 
 run:
 		./$(EXE_H)
